--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="text-center footer-content" [ngClass]="{'footer-background': !sidebar, 'height-2':height_adjust, 'height-1':!height_adjust}">
+<div *ngIf="!simplified" class="text-center footer-content" [ngClass]="{'footer-background': !sidebar, 'height-2':height_adjust, 'height-1':!height_adjust}">
   <div class="footer-below" [ngClass]="sidebar == true ? 'sidebarred':''">
     <div [ngClass]="sidebar == true ? 'container-fluid':'container'">
       <div class="row">
@@ -30,6 +30,29 @@
                 &nbsp;Gameplay images related to Grepolis are copyright of InnoGames GmbH.
             </div>
         </div>
+    </div>
+  </div>
+</div>
+<div *ngIf="simplified" class="text-center footer-content footer-background height-0">
+  <div class="footer-below">
+    <div class="container">
+      <div class="row">
+	      <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8" *ngIf="copyright" style="padding: 12px;">
+		      <strong>Copyright notices: </strong>
+		      &nbsp;Gameplay images related to Grepolis are copyright of InnoGames GmbH.
+	      </div>
+
+        <div [ngClass]="copyright == true ? 'col-xs-12 col-sm-12 col-md-4 col-lg-4':'col-xs-12'">
+          Copyright &copy; Grepodata {{date| date:'yyyy'}}
+          <br/>
+          <a class="a-link-dialog" (click)="showDisclaimerDialog()">Disclaimer</a>
+          &nbsp; | &nbsp;
+          <a class="a-link-dialog" routerLink="/privacy">Privacy</a>
+          &nbsp; | &nbsp;
+          <a class="a-link-dialog" routerLink="/analytics">Status</a>
+        </div>
+
+      </div>
     </div>
   </div>
 </div>
