--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -8,6 +8,10 @@
   background-color: #f5f5f5;
 }
 
+.height-0 {
+  height: 60px !important;
+  margin-top: 30px !important;
+}
 .height-1 {
   height: 90px !important;
 }
