--- a/src/app/indexer/player/player.component.html
+++ b/src/app/indexer/player/player.component.html
@@ -1,39 +1,39 @@
 <div style="overflow-x: hidden;">
 
-  <mat-card class="decorated-card" [ngClass]="{'embedded-padding': embedded}" style="box-shadow: none !important;"
-            [ngStyle]="{'background': !embedded?'#fbfbfb':''}">
-    <mat-card-title class='decorated-card-header decorated-title' *ngIf="!embedded" style="margin-bottom: 0px;">
+	<mat-card class="index-card" [ngClass]="{'embedded-padding': embedded}"
+	          [ngStyle]="{'background': !embedded?'#fff':''}">
+		<div class="card-header bg-gd-2 text-center" *ngIf="!embedded" style="margin-bottom: 0;">
 
-      <div style="position: absolute; top: 10px; max-width: 200px;">
-        <button mat-button class="mat-raised-button bg-gd-2" style="width: 100%; overflow: hidden; text-overflow: ellipsis;" routerLink="/indexer/{{key}}">
-          <i class="fa fa-arrow-left"></i> Index: {{key}}
-        </button>
-      </div>
+      <!--<div style="position: absolute; top: 10px; max-width: 200px;">-->
+        <!--<button mat-button class="mat-raised-button bg-gd-2" style="width: 100%; overflow: hidden; text-overflow: ellipsis;" routerLink="/indexer/{{key}}">-->
+          <!--<i class="fa fa-arrow-left"></i> Index: {{key}}-->
+        <!--</button>-->
+      <!--</div>-->
 
       <h1>
         Showing collected intel for:
-        <i class="fa fa-user gd-secondary" aria-hidden="true"></i>&nbsp;
-        <span>{{playerName}}</span>
+        <span class="gd-primary">{{playerName}}<span *ngIf="loading && playerName == ''">Loading...</span></span>
       </h1>
-      <h3>
+      <h3 *ngIf="!loading">
         <span class="index-title hidden-xs">
-          Index: <span class='world-title'><a class="a-link-dialog" style="color: #334254 !important;" routerLink="/indexer/{{key}}">{{key}}</a></span>
+          Index: <span class='world-title'><a class="a-link-dialog" routerLink="/indexer/{{key}}">{{key}}</a></span>
         </span>
         <span class="index-title">
-          World: <span class='world-title gd-secondary' *ngIf="world"><div class="bg-flag flag-inline-title flag-{{world.substr(0,2)}}"></div>&nbsp;<a class="a-link-dialog" style="color: #334254 !important;" routerLink="/points" [queryParams]="{world: world}">{{worldName}}&nbsp;({{world}})</a></span>
+          World: <span class='world-title gd-secondary' *ngIf="world"><div class="bg-flag flag-inline-title flag-{{world.substr(0,2)}}"></div>&nbsp;<a class="a-link-dialog" routerLink="/points" [queryParams]="{world: world}">{{worldName}}&nbsp;({{world}})</a></span>
         </span>
         <span class="index-title" *ngIf="allianceId != 0">
-          Alliance: <span class='world-title gd-secondary'><a class="a-link-dialog" style="color: #334254 !important;" routerLink="/indexer/alliance/{{key}}/{{world}}/{{allianceId}}">{{allianceName}}</a></span>
+          Alliance: <span class='world-title gd-primary'><a class="a-link-dialog" routerLink="/indexer/alliance/{{key}}/{{world}}/{{allianceId}}">{{allianceName}}</a></span>
         </span>
         <span class="index-title">
-          Stats: <span class='world-title gd-secondary'><a class="a-link-dialog" style="color: #334254 !important;" routerLink="/player" [queryParams]="{world: world, id: id}">View player statistics</a></span>
+          Stats: <span class='world-title gd-primary'><a class="a-link-dialog" routerLink="/player" [queryParams]="{world: world, id: id}">View player statistics</a></span>
         </span>
       </h3>
+			<h3 *ngIf="loading">&nbsp;</h3>
 
-    </mat-card-title>
+    </div>
     <mat-card-content class="decorated-card-content" [ngClass]="{'embedded-padding': embedded}" style="padding: 0 !important;">
 
-      <app-index-search [indexKey]="key" *ngIf="!embedded"></app-index-search>
+      <!--<app-index-search [indexKey]="key" *ngIf="!embedded"></app-index-search>-->
 
       <div *ngIf="embedded">
         <h4 class="gd-primary text-center">
