--- a/src/gd-theme.scss
+++ b/src/gd-theme.scss
@@ -1,10 +1,29 @@
 @import '~@angular/material/theming';
 // Plus imports for other components in your app.
 
+// Define a custom typography config that overrides the font-family as well as the
+// `headlines` and `body-1` levels.
+//$custom-typography: mat-typography-config(
+//        //$font-family: 'Poppins,Helvetica,"sans-serif"',
+//        $font-family: 'Raleway,Helvetica,"sans-serif"',
+//        $headline: mat-typography-level(32px, 48px, 700),
+//        $body-1: mat-typography-level(16px, 24px, 500)
+//);
+
+// Override typography CSS classes (e.g., mat-h1, mat-display-1, mat-typography, etc.).
+//@include mat-base-typography($custom-typography);
+
+// Override typography for a specific Angular Material components.
+//@include mat-checkbox-typography($custom-typography);
+
+// Override typography for all Angular Material, including mat-base-typography and all components.
+//@include angular-material-typography($custom-typography);
+
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat-core();
+//@include mat-core($custom-typography);
 
 $my-app-primary: mat-palette($mat-teal);
 $my-app-accent:  mat-palette($mat-teal, 500, 900, A100);
